# proxyproviders

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  exceptions.html  genindex.html  index.html  models.html  objects.inv  proxyprovider.html  proxyproviders.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: ci-main.yml  ci.yml  docs.yml  publish.yml
.sphinx/: conf.py  exceptions.rst  index.rst  proxyprovider.rst  proxyproviders.rst
.sphinx/providers/: brightdata.rst  webshare.rst
_modules/: index.html
_modules/proxyproviders/: exceptions.html  proxy_provider.html
_modules/proxyproviders/models/: proxy.html
_modules/proxyproviders/providers/: brightdata.html  webshare.html
_sources/: index.rst.txt  models.rst.txt  proxyproviders.rst.txt
_sources/providers/: webshare.rst.txt
examples/: request_with_proxy_provider.py  simple_usage.py
providers/: brightdata.html  webshare.html
proxyproviders/: __init__.py  errors.py  exceptions.py  proxy_provider.py  version.py
proxyproviders/models/: proxy.py
proxyproviders/providers/: brightdata.py  webshare.py
tests/: conftest.py  test_algorithms.py  test_exceptions.py  test_proxy_model.py  test_proxy_provider.py
tests/integration/: test_algorithms_integration.py  test_brightdata_algorithms_integration.py  test_brightdata_integration.py  test_webshare_integration.py
tests/providers/: test_brightdata.py  test_webshare.py
