[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proxyproviders"
version = "0.1.0"
description = "A unified interface for different proxy providers"
readme = "README.md"
authors = [{ name = "David Teather", email = "contact.davidteather@gmail.com" }]
license = { file = "LICENSE" }
dependencies = ["requests"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest", "sphinx", "black", "mypy", "coverage", "types-requests", "toml"]

[tool.setuptools.packages.find]
where = ["proxyproviders"]

[tool.coverage.run]
branch = true
source = ["proxyproviders"]
omit = ["tests/*"]

