[metadata]
name = proxyproviders
version = 0.1.0
description = A unified interface for different proxy providers
long_description = file: README.md
long_description_content_type = text/markdown
author = David Teather
author_email = contact.davidteather@gmail.com
license = MIT
url = https://github.com/davidteather/proxyproviders
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where = proxyproviders

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = proxyproviders
