[bumpversion]
current_version = 0.2.2

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:proxyproviders/version.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
name = proxyproviders
version = attr: proxyproviders.version.__version__
description = A unified interface for different proxy providers
long_description = file: README.md
long_description_content_type = text/markdown
author = David Teather
author_email = contact.davidteather@gmail.com
license = MIT
url = https://github.com/davidteather/proxyproviders
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where = proxyproviders

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = proxyproviders
